# Move_DMS

./: .gitattributes  .gitignore  Move.toml
scripts/: config.js  current_time.js  package-lock.json  package.json  subscribe_events.js
sources/: DMS.move
zk_proof/: .gitignore  Cargo.toml  README.md  main.circom  package.json  witness.rs
zk_proof/main_js/: main.wasm
zk_proof/zk_proofs/: .gitignore  Cargo.toml
zk_proof/zk_proofs/zk_snarks/: Cargo.toml
